@@ -3,25 +3,28 @@
 lib_LTLIBRARIES = libbuzzmachineloader.la
 
 libbuzzmachineloader_la_SOURCES = \
-    BuzzMachine.h \
     BuzzMachineCallbacks.cpp \
-    BuzzMachineCallbacks.h \
     BuzzMachineCallbacksPre12.cpp \
-    BuzzMachineCallbacksPre12.h \
     BuzzMachineLoader.cpp \
-    BuzzMachineLoader.h \
     BuzzMachineVirtualCallbacks.cpp \
-    CMachine.h \
     MachineDataImpl.cpp \
+    OscTable.cpp \
+    mdkimp.cpp \
+    debug.cpp
+	
+noinst_HEADERS = \
+    BuzzMachine.h \
+    BuzzMachineCallbacks.h \
+    BuzzMachineCallbacksPre12.h \
+    BuzzMachineLoader.h \
+    CMachine.h \
+    CSong.h \
     MachineDataImpl.h \
     MachineInterface.h \
-    OscTable.cpp \
     OscTable.h \
     mdk.h \
-    mdkimp.cpp \
     mdkimp.h \
     bw.h \
-    debug.cpp \
     debug.h \
     dsplib.h \
     resample.h
